examples/errors/runtime/error5.tab
b = import('./error3');

b();
